# cppversus-cli

./: .gitignore  .gitmodules  README.md  build.sh  meson.build
include/: CPPVersus-CLI.hpp
src/: main.cpp
subprojects/: cpr.wrap
